Fixed footer overlap
Added padding to the bottom of the body so the footer will no longer
over-lap the content.

--- a/front/src/components/Home/Home.css
+++ b/front/src/components/Home/Home.css
@@ -1,3 +1,7 @@
+body {
+  padding-bottom: 80px;
+}
+
 .header {
   width: 100%;
   height: 60px;
